added-recipes-list-and-filters

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -5,6 +5,7 @@
     </div>
     <div class="toolbar-button">
         <button mat-raised-button color="accent">Add</button>
-        <button mat-raised-button color="accent">View</button>
     </div>
 </mat-toolbar>
+
+<app-recipes-list></app-recipes-list>
