Categories-Filter-Added

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar color="accent">
+
     <span>Find Recipes</span>
     <div class="search">
         <input type="text" placeholder="Search for a recipe">
@@ -8,3 +9,4 @@
         <button mat-raised-button color="accent">View</button>
     </div>
 </mat-toolbar>
+<app-filters></app-filters>
