--- a/src/app/filters/filters.component.css
+++ b/src/app/filters/filters.component.css
@@ -3,12 +3,14 @@ mat-card{
     margin: 20px auto;
     color: #ff4081;
     padding: 10px!important;
+    font-family: 'Josefin Sans','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 mat-card-title{
     text-align: center;
 }
 .category{
     text-align: center;
+    cursor:pointer;
 }
 .category img{
     width: 50px;
