--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -6,7 +6,8 @@
     </div>
     <div class="toolbar-button">
         <button mat-raised-button color="accent">Add</button>
-        <button mat-raised-button color="accent">View</button>
     </div>
 </mat-toolbar>
 <app-filters></app-filters>
+
+<app-recipes-list></app-recipes-list>
