--- a/src/app/recipes-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
 <mat-card matRipple>
     <img mat-card-image src="../../../assets/chinese.jpg" height="130">
     <mat-card-content>
-        <h5>Recipe Name</h5>
+        <h5>Name</h5>
     </mat-card-content>
 </mat-card>
