--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,12 @@ body { margin: 0;padding: 0; font-family: 'Josefin Sans',Roboto, "Helvetica Neue
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-dialog-container{
+    width: 80% !important;
+    height: auto!important;
+    transform: translate(-50%,-50%);
+    top: 20%;
+    left: 10%;
+    position: absolute;
+}
