--- a/src/app/recipes-list/recipes-list.component.html
+++ b/src/app/recipes-list/recipes-list.component.html
@@ -8,7 +8,7 @@
             <mat-card-title>Filters</mat-card-title>
             <mat-card-content>
                 <mat-radio-group [(ngModel)]="type" (change)="onSelectType()">
-                    <mat-radio-button checked="true">All</mat-radio-button>
+                    <mat-radio-button value="">All</mat-radio-button>
                     <mat-radio-button value="V">Veg only</mat-radio-button>
                     <mat-radio-button value="NV">Non-veg only</mat-radio-button>
                 </mat-radio-group>
