--- a/src/app/filters/filters.component.css
+++ b/src/app/filters/filters.component.css
@@ -28,3 +28,10 @@ mat-card-content{
     align-items: center;
     justify-content:space-between;
 }
+.active{
+    border: 1px solid #ff4081;
+    padding: 2px;
+    border-radius: 5px;
+    background: #ff4081;
+    color: #fff;
+}
