--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -4,7 +4,7 @@
         <input type="text" placeholder="Search for a recipe" [(ngModel)]="recipeName" (keyup)="get($event)">
     </div>
     <div class="toolbar-button">
-        <button mat-raised-button color="accent" (click)="clickAdd()">Add</button>
+        <button mat-raised-button style="color:#ff4181; background-color: white;" (click)="clickAdd()">Add</button>
     </div>
 </mat-toolbar>
 <app-filters></app-filters>
