--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     width: 80% !important;
     height: auto!important;
     transform: translate(-50%,-50%);
-    top: 20%;
+    top: 10%;
     left: 10%;
     position: absolute;
+}
+.custom-btn{
+    background: #fff;
+    color: #ff4081;
+}
+.empty-screen{
+    width: 80%!important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
